# cmd/api/feed.go
@@ -1,6 +1,10 @@
 package main
 
-import "net/http"
+import (
+	"net/http"
+
+	"github.com/Saswat-Sagar-Sahu/Social/internal/auth"
+)
 
 // getUserFeedHandler retrieves the feed for a specific user
 //
@@ -10,12 +14,20 @@ import "net/http"
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{array}		store.Post
+//	@Failure		401	{object}	errorResponse
 //	@Failure		500	{object}	errorResponse
-//	@Router			/feed [get]
+//	@Security		BearerAuth
+//	@Router			/users/feed [get]
 func (app *application) getUserFeedHandler(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	feed, err := app.Store.Posts.GetUserFeed(ctx, int64(2))
+	userID, ok := auth.UserIDFromContext(ctx)
+	if !ok {
+		app.unauthorizedResponse(w, r, ErrInvalidCredentials)
+		return
+	}
+
+	feed, err := app.Store.Posts.GetUserFeed(ctx, userID)
 	if err != nil {
 		app.statusInternalServerError(w, r, err)
 		return
