# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /v1
 definitions:
   main.createCommentRequest:
     properties:
@@ -65,6 +64,8 @@ definitions:
     type: object
   store.User:
     properties:
+      activated:
+        type: boolean
       created_at:
         type: string
       email:
@@ -122,6 +123,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Create a new comment
       tags:
       - comments
@@ -142,11 +145,70 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/main.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/main.errorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Delete a comment by ID
+      tags:
+      - comments
+    put:
+      consumes:
+      - application/json
+      description: Update a comment by its unique ID
+      parameters:
+      - description: Comment ID
+        format: int64
+        in: path
+        name: commentId
+        required: true
+        type: integer
+      - description: Updated comment data
+        in: body
+        name: comment
+        required: true
+        schema:
+          $ref: '#/definitions/main.createCommentRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Comment'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
+      summary: Update a comment by ID
       tags:
       - comments
   /comments/post/{postId}:
@@ -213,27 +275,6 @@ paths:
       summary: Retrieve comments by user ID
       tags:
       - comments
-  /feed:
-    get:
-      consumes:
-      - application/json
-      description: Get the feed for a specific user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/store.Post'
-            type: array
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/main.errorResponse'
-      summary: Retrieve user feed
-      tags:
-      - feed
   /health:
     get:
       description: Checks the health status of the API
@@ -272,10 +313,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/main.errorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/main.errorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Create a new post
       tags:
       - posts
@@ -359,16 +406,6 @@ paths:
         name: userId
         required: true
         type: integer
-      - description: Follower ID
-        in: body
-        name: follower
-        required: true
-        schema:
-          properties:
-            follower_id:
-              format: int64
-              type: integer
-          type: object
       produces:
       - application/json
       responses:
@@ -376,6 +413,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/main.errorResponse'
         "404":
@@ -390,6 +431,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Follow a user
       tags:
       - users
@@ -405,16 +448,6 @@ paths:
         name: userId
         required: true
         type: integer
-      - description: Follower ID
-        in: body
-        name: follower
-        required: true
-        schema:
-          properties:
-            follower_id:
-              format: int64
-              type: integer
-          type: object
       produces:
       - application/json
       responses:
@@ -422,6 +455,10 @@ paths:
           description: No Content
         "400":
           description: Bad Request
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "401":
+          description: Unauthorized
           schema:
             $ref: '#/definitions/main.errorResponse'
         "404":
@@ -432,6 +469,8 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
       summary: Unfollow a user
       tags:
       - users
@@ -470,6 +509,33 @@ paths:
       summary: Activate a user account
       tags:
       - users
+  /users/feed:
+    get:
+      consumes:
+      - application/json
+      description: Get the feed for a specific user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Post'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+      security:
+      - BearerAuth: []
+      summary: Retrieve user feed
+      tags:
+      - feed
   /users/login:
     post:
       consumes:
@@ -502,6 +568,10 @@ paths:
             $ref: '#/definitions/main.errorResponse'
         "401":
           description: Unauthorized
+          schema:
+            $ref: '#/definitions/main.errorResponse'
+        "403":
+          description: Forbidden
           schema:
             $ref: '#/definitions/main.errorResponse'
         "500":
@@ -549,4 +619,10 @@ paths:
       summary: Register a new user
       tags:
       - users
+securityDefinitions:
+  BearerAuth:
+    description: 'Provide the JWT token as: Bearer <token>'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
